<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical"
    tools:context=".AddTaskActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black"
        android:padding="10dp">
        <TextView
            android:id="@+id/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:textColor="@color/sky_blue"
            android:textSize="17sp"/>
        <TextView
            android:id="@+id/newTaskWindow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_task"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:layout_centerInParent="true"
            android:textSize="17sp"/>
        <!-- Button to Add/Update Task -->
        <TextView
            android:id="@+id/buttonSaveTask"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:text="@string/save"
            android:textColor="@color/sky_blue"
            android:textSize="17sp"
            android:layout_alignParentEnd="true"
            tools:ignore="RelativeOverlap" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <!-- Task Title -->
        <TextView
            android:id="@+id/textViewTaskTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/task_title"
            android:layout_marginStart="25dp"
            android:layout_marginTop="16dp"
            android:textColor="@color/grey"/>
        <EditText
            android:id="@+id/editTextTaskTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="25dp"
            android:autofillHints=""
            android:background="@drawable/edit_text_background"
            android:hint="@string/enter_task_title"
            android:inputType="text"
            android:textSize="20sp"
            android:padding="10dp"
            android:textColor="@color/black"
            tools:ignore="TouchTargetSizeCheck" />

        <!-- Task Description -->
        <TextView
            android:id="@+id/textViewTaskDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/task_description"
            android:layout_marginStart="25dp"
            android:layout_marginTop="16dp"
            android:textColor="@color/grey"/>

        <EditText
            android:id="@+id/editTextTaskDescription"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="25dp"
            android:padding="10dp"
            android:background="@drawable/edit_text_background"
            android:hint="@string/enter_task_description"
            android:importantForAutofill="no"
            android:inputType="textLongMessage"
            android:gravity="top|start"
            android:textColor="@color/black"/>

        <!-- Date and Time Picker -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/target_date_and_time"
            android:layout_marginStart="25dp"
            android:layout_marginTop="16dp"
            android:textColor="@color/grey"/>

        <TextView
            android:id="@+id/buttonPickDateTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="8dp"
            android:text="@string/pick_date_and_time"
            android:gravity="center"
            android:padding="10dp"
            android:background="@android:color/white"
            android:textColor="@android:color/black"
            android:layout_marginEnd="25dp"/>


    </LinearLayout>

</LinearLayout>
