<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardBackgroundColor="#B9FDFDFD"

    android:padding="16dp"
    android:layout_marginVertical="3dp"
    app:cardCornerRadius="10dp"
    app:cardElevation="30dp">

    <RelativeLayout
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <!-- Task Title -->
        <TextView
            android:id="@+id/taskTitle"
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/task_title"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <!-- Edit and Delete Icons -->
        <TextView
            android:id="@+id/txtIndicateCompleted"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textStyle="bold"
            android:layout_alignStart="@id/checkBoxCompleted"
            android:layout_marginStart="-60dp"
            android:layout_marginEnd="35dp"
            android:layout_marginTop="10dp"
            android:textColor="#A4F447" />
        <CheckBox
            android:id="@+id/checkBoxCompleted"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@id/delete"
            android:layout_marginStart="-95dp"
            android:layout_marginEnd="35dp"
            android:layout_marginTop="-3dp"
            android:text="@string/blank"
            android:backgroundTint="@color/color_primary"/>

        <ImageView
            android:id="@+id/edit"
            android:layout_width="20dp"
            android:layout_height="wrap_content"
            android:layout_alignStart="@id/delete"
            android:layout_marginStart="-43dp"
            android:layout_marginEnd="35dp"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/edit_task"
            android:src="@drawable/pencil" />

        <ImageView
            android:id="@+id/delete"
            android:layout_width="20dp"
            android:layout_height="wrap_content"
            android:src="@drawable/delete"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:contentDescription="@string/delete_task"
            android:layout_alignParentEnd="true"/>


    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_alignBottom="@+id/title">
        <!-- Task Description -->
        <TextView
            android:id="@+id/taskDes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:text="@string/task_description1"
            android:layout_marginStart="15dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="130dp"
            android:textColor="@color/grey" />
        <!-- Task Date and Time -->
        <TextView
            android:id="@+id/taskDateTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:text="@string/target_date_and_time"
            android:textColor="@color/grey"
            android:layout_marginTop="10dp"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="10dp"/>

    </RelativeLayout>

    <!-- Task Category
    <TextView
        android:id="@+id/taskCategory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:textColor="@android:color/holo_red_dark"
        android:text="@string/categories"
        android:layout_marginTop="4dp" />-->


</androidx.cardview.widget.CardView>
